--- a/css/app.css
+++ b/css/app.css
@@ -12,7 +12,7 @@
     background: url(../image/header1.png) no-repeat left top;
 }
 
-.item-sms-con .item-sms-each{
+.sms-list .sms-item{
     width: 270px;
     height: 50px;
     display: flex;
@@ -22,37 +22,37 @@
     padding-bottom: 7px;
 }
 
-.item-sms-con .item-sms-each .item-sms-pic {
+.sms-list .sms-item .sms-item-pic {
     display: block;
     width: 43px;
     height: 40px;
     margin-left: 13px;
 }
 
-.item-sms-con .item-sms-each .item-sms-des{
+.sms-list .sms-item .sms-item-des{
     width: 190px;
     height: 100%;
     margin-left: 10px;
     border-bottom: 1px solid #cdcdcd;
 }
 
-.item-sms-con .item-sms-each .item-sms-des .sme-title {
+.sms-list .sms-item .sms-item-des .sme-title {
     width: 100%;
     height: 23px;
 }
 
-.item-sms-con .item-sms-each .item-sms-des .sms-title{
+.sms-list .sms-item .sms-item-des .sms-title{
     width: 100%;
     height: 20px;
 }
 
 
-.item-sms-con .item-sms-each .item-sms-des .sms-title .sms-time {
+.sms-list .sms-item .sms-item-des .sms-title .sms-time {
     width: 20px;
     height: 100%;
     float: right;
 }
-.item-sms-con .item-sms-each .item-sms-des .sms-con{
+.sms-list .sms-item .sms-item-des .sms-con{
     width: 100%;
     text-overflow: ellipsis;
     white-space: nowrap;
